Fixed the first image's size problem and also learn how to display a welcome popup.

--- a/Clucking-Bell-Website/style.css
+++ b/Clucking-Bell-Website/style.css
@@ -26,13 +26,14 @@ body {
 
 
 .image img {
-    width: 20px;
-    height: 20px;
-    
+    width: 300px;
+    height: 250px;
+    margin-bottom: 10px;
 }
 
-.image2 {
-    
+.image2 img {
+    width: 300px;
+    height:250px;
 }
 
 .slogan {
